# firniture

./: .env.test.example  .gitignore  .mcp.json  .tmp_pg_test.py  AGENT.md  CACHE_BUSTING_GUIDE.md  FRONTEND_TASKS.md  RDP.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gemini.md  pyproject.toml  run.py  server-setup.sh  setup.cfg  План задач.md  дизайн.md  описание.md
.claude/: settings.local.json
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.kilocode/: mcp.json
.kilocode/rules/: gemini.md
.qoder/quests/: unknown-task.md
.qoder/rules/: important.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_artifact_id_to_cam_jobs.py  0003_add_vector_to_hardware_items.py  0004_embedding_vector_and_index.py  0005_cleanup_embedding_array.py  0006_frida_embedding_768.py  0e26f2d9df07_add_factory_settings.py  396bcc1972dc_add_factory_user_magic_token_tables.py  5e11f580316b_add_status_to_orders.py  b52b43cce1ca_add_idempotency_key_to_cam_jobs.py  bfd67af6351f_add_vector_index_to_hardware_items.py  c38f02a0c2db_add_edge_front_edge_back_to_panels.py  d4e5372b9af5_add_dialoguemessage_model.py  e1a2b3c4d5f6_add_drilling_points_to_panels.py  f1a2b3c4d5e6_add_manufacturing_revisions.py
api/: Dockerfile  README.md  access_control.py  ai_tools.py  alembic.ini  auth.py  billing.py  cam_jobs.py  constants.py  crud.py  database.py  domain_schemas.py  drilling_calculator.py  drilling_gcode.py  drilling_templates.py  dxf_generator.py  entitlements.py  export_1c.py  gcode_generator.py  guest_access.py  guest_upload.py  hardware_rules.py  main.py  models.py  observability.py  panel_calculator.py  pdf_generator.py  pdf_utils.py  queues.py  rate_limits.py  routers.py  runtime_settings.py  schemas.py  settings.py  support.py  vector_search.py  vision_extraction.py  worker.py
api/ai/: client.py  contracts.py  dialogue.py  embeddings.py  evaluation.py  usage.py  vision.py
api/alembic/: env.py
api/manufacturing/: __init__.py  approvals.py  artifacts.py  contracts.py  coordinates.py  cutting_map.py  dxf_export.py  edge_export.py  layout.py  machine_profiles.py  setups.py  spec_builder.py  tool_library.py
api/mocks/: CHANGES_ROUTERS.diff  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  dialogue_mocks.py  test_dialogue_mock.py
api/routes/: entitlements.py  manufacturing.py  support.py
api/scripts/: __init__.py  backfill_embeddings.py  clear_hardware.py  hello.py  import_boyard.py  import_hardware.py  import_hardware_json.py
auto-test/: авто-тест.md
auto-test/.playwright-mcp/: orders-all.csv  orders-all.xls
auto-test/аудит1/: аудит.md
cad-cam/: freecad_gcode.py
data/: hardware_catalog.json
deploy/: Caddyfile  backup.sh  deploy.sh  release_manifest.py  restore.sh  rollback.sh
docs/: ai_dialogue_spec.md  architecture.md  cam-states.md
furniture_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: generate_api_types.py
shared/: __init__.py  ai_client.py  ai_settings.py  email.py  embeddings.py  spec_extraction.py  storage.py  yandex_ai.py
tests/: conftest.py  test_access_control.py  test_ai_settings_openrouter.py  test_api_integration.py  test_constants.py  test_cost_estimate.py  test_drilling_calculator.py  test_drilling_gcode.py  test_drilling_integration.py  test_drilling_templates.py  test_email.py  test_export_1c.py  test_generate_dxf_cabinet.py  test_hardware_rules.py  test_observability.py  test_observability_integration.py  test_openapi_contract.py  test_panel_calculator.py  test_runtime_settings.py  test_runtime_settings_integration.py  test_support.py
tests/ai/: __init__.py  fakes.py  test_client.py  test_dialogue_tools.py  test_embeddings.py  test_model_evaluation.py  test_vision.py
tests/deploy/: test_backup_restore.py  test_compose.py  test_deploy_scripts.py
tests/fixtures/: openapi_snapshot.json  test_complex_layout.json
tests/integration/: __init__.py  test_bom_manufacturing_persistence.py  test_cam_job_envelope.py  test_cam_jobs.py  test_entitlements.py  test_entitlements_route.py  test_environment.py  test_guest_upload_flow.py  test_manufacturing_approval.py  test_manufacturing_approval_flow.py  test_manufacturing_migration.py  test_support_route.py
tests/load/: order-flow.js  test_order_flow_contract.py
tests/manufacturing/: test_artifact_separation.py  test_cam_golden_suite.py  test_contracts.py  test_coordinates.py  test_cutting_map.py  test_dxf_export.py  test_edge_export.py  test_fanuc_postprocessor.py  test_gcode_bundle.py  test_gcode_ir.py  test_gcode_safety.py  test_layout.py  test_machine_profiles.py  test_setups.py  test_spec_builder.py  (+2 more)
web/: Dockerfile  MIGRATION_GUIDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+147 files in other folders)
