[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "W503"]

[tool.ruff.isort]
known-first-party = ["api", "integrations", "cad-cam", "shared"]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "furniture-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"sqlalchemy>=2.0.32",
	"asyncpg>=0.29.0",
	"alembic>=1.13.2",
	"redis>=5.0.7",
	"boto3>=1.34.150",
	"botocore>=1.34.150",
	"pydantic-settings>=2.4.0",
	"aiohttp>=3.10.0",
	"numpy>=1.26.0",
	"scipy>=1.13.0",
	"pgvector>=0.4.1",
	"pandas>=2.2.0",
	"openpyxl>=3.1.0",
	"typer>=0.9.0",
	"psycopg-binary>=3.1.0",
]
